--- a/Paginas/marcas.html
+++ b/Paginas/marcas.html
@@ -12,7 +12,7 @@
 <body>
   <header>
     <div class="logosa">
-      <img src="/Logos/LOGO SANFRANCISCO.png" alt="Logo Sanfrancisco Distribuidora">
+      <img src="./Logos/LOGO SANFRANCISCO.png" alt="Logo Sanfrancisco Distribuidora">
     </div>
     <nav>
       <ul>
@@ -35,29 +35,29 @@
     <section class="slider">
       <div class="slide-track bomboniere-track">
 
-        <div class="slide"><img src="/Logos/bomboniere/arcor.png" alt="Arcor"></div>
-        <div class="slide"><img src="/Logos/bomboniere/bagley.png" alt="Bagley"></div>
-        <div class="slide"><img src="/Logos/bomboniere/docile.png" alt="Docile"></div>
-        <div class="slide"><img src="/Logos/bomboniere/dori.webp" alt="Dori"></div>
-        <div class="slide"><img src="/Logos/bomboniere/florestal.webp" alt="Florestal"></div>
-        <div class="slide"><img src="/Logos/bomboniere/mondelez.png" alt="Mondelez"></div>
-        <div class="slide"><img src="/Logos/bomboniere/NUCITA.png" alt="NUCITA"></div>
-        <div class="slide"><img src="/Logos/bomboniere/riclan.png" alt="Riclan"></div>
-        <div class="slide"><img src="/Logos/bomboniere/SANTA HELENA.png" alt="Santa Helena"></div>
-        <div class="slide"><img src="/Logos/bomboniere/SImas.png" alt="Simas"></div>
-        <div class="slide"><img src="/Logos/bomboniere/ZDALIMENTOS.PNG" alt="ZD Alimentos"></div>
+        <div class="slide"><img src="../Logos/bomboniere/arcor.png" alt="Arcor"></div>
+        <div class="slide"><img src="../Logos/bomboniere/bagley.png" alt="Bagley"></div>
+        <div class="slide"><img src="../Logos/bomboniere/docile.png" alt="Docile"></div>
+        <div class="slide"><img src="../Logos/bomboniere/dori.webp" alt="Dori"></div>
+        <div class="slide"><img src="../Logos/bomboniere/florestal.webp" alt="Florestal"></div>
+        <div class="slide"><img src="../Logos/bomboniere/mondelez.png" alt="Mondelez"></div>
+        <div class="slide"><img src="../Logos/bomboniere/NUCITA.png" alt="NUCITA"></div>
+        <div class="slide"><img src="../Logos/bomboniere/riclan.png" alt="Riclan"></div>
+        <div class="slide"><img src="../Logos/bomboniere/SANTA HELENA.png" alt="Santa Helena"></div>
+        <div class="slide"><img src="../Logos/bomboniere/SImas.png" alt="Simas"></div>
+        <div class="slide"><img src="../Logos/bomboniere/ZDALIMENTOS.PNG" alt="ZD Alimentos"></div>
 
-        <div class="slide"><img src="/Logos/bomboniere/arcor.png" alt="Arcor"></div>
-        <div class="slide"><img src="/Logos/bomboniere/bagley.png" alt="Bagley"></div>
-        <div class="slide"><img src="/Logos/bomboniere/docile.png" alt="Docile"></div>
-        <div class="slide"><img src="/Logos/bomboniere/dori.webp" alt="Dori"></div>
-        <div class="slide"><img src="/Logos/bomboniere/florestal.webp" alt="Florestal"></div>
-        <div class="slide"><img src="/Logos/bomboniere/mondelez.png" alt="Mondelez"></div>
-        <div class="slide"><img src="/Logos/bomboniere/NUCITA.png" alt="NUCITA"></div>
-        <div class="slide"><img src="/Logos/bomboniere/riclan.png" alt="Riclan"></div>
-        <div class="slide"><img src="/Logos/bomboniere/SANTA HELENA.png" alt="Santa Helena"></div>
-        <div class="slide"><img src="/Logos/bomboniere/SImas.png" alt="Simas"></div>
-        <div class="slide"><img src="/Logos/bomboniere/ZDALIMENTOS.PNG" alt="ZD Alimentos"></div>
+        <div class="slide"><img src="../Logos/bomboniere/arcor.png" alt="Arcor"></div>
+        <div class="slide"><img src="../Logos/bomboniere/bagley.png" alt="Bagley"></div>
+        <div class="slide"><img src="../Logos/bomboniere/docile.png" alt="Docile"></div>
+        <div class="slide"><img src="../Logos/bomboniere/dori.webp" alt="Dori"></div>
+        <div class="slide"><img src="../Logos/bomboniere/florestal.webp" alt="Florestal"></div>
+        <div class="slide"><img src="../Logos/bomboniere/mondelez.png" alt="Mondelez"></div>
+        <div class="slide"><img src="../Logos/bomboniere/NUCITA.png" alt="NUCITA"></div>
+        <div class="slide"><img src="../Logos/bomboniere/riclan.png" alt="Riclan"></div>
+        <div class="slide"><img src="../Logos/bomboniere/SANTA HELENA.png" alt="Santa Helena"></div>
+        <div class="slide"><img src="../Logos/bomboniere/SImas.png" alt="Simas"></div>
+        <div class="slide"><img src="../Logos/bomboniere/ZDALIMENTOS.PNG" alt="ZD Alimentos"></div>
 
       </div>
     </section>
@@ -66,25 +66,25 @@
     <section class="slider">
       <div class="slide-track perfumaria-track">
 
-        <div class="slide"><img src="/Logos/perfumaria/BIOSOFT.png" alt="Biosoft"></div>
-        <div class="slide"><img src="/Logos/perfumaria/GRANADO.PNG" alt="Granado"></div>
-        <div class="slide"><img src="/Logos/perfumaria/JADEPRO.png" alt="JADEPRO"></div>
-        <div class="slide"><img src="/Logos/perfumaria/kimbely clark.png" alt="Kimberly Clark"></div>
-        <div class="slide"><img src="/Logos/perfumaria/KISSES.png" alt="KISSES"></div>
-        <div class="slide"><img src="/Logos/perfumaria/Martins.png" alt="Martins"></div>
-        <div class="slide"><img src="/Logos/perfumaria/PETITA.png" alt="Petita"></div>
-        <div class="slide"><img src="/Logos/perfumaria/SOFTHAIR.png" alt="Softhair"></div>
-        <div class="slide"><img src="/Logos/perfumaria/UNILEVER.png" alt="Unilever"></div>
+        <div class="slide"><img src="../Logos/perfumaria/BIOSOFT.png" alt="Biosoft"></div>
+        <div class="slide"><img src="../Logos/perfumaria/GRANADO.PNG" alt="Granado"></div>
+        <div class="slide"><img src="../Logos/perfumaria/JADEPRO.png" alt="JADEPRO"></div>
+        <div class="slide"><img src="../Logos/perfumaria/kimbely clark.png" alt="Kimberly Clark"></div>
+        <div class="slide"><img src="../Logos/perfumaria/KISSES.png" alt="KISSES"></div>
+        <div class="slide"><img src="../Logos/perfumaria/Martins.png" alt="Martins"></div>
+        <div class="slide"><img src="../Logos/perfumaria/PETITA.png" alt="Petita"></div>
+        <div class="slide"><img src="../Logos/perfumaria/SOFTHAIR.png" alt="Softhair"></div>
+        <div class="slide"><img src="../Logos/perfumaria/UNILEVER.png" alt="Unilever"></div>
 
-        <div class="slide"><img src="/Logos/perfumaria/BIOSOFT.png" alt="Biosoft"></div>
-        <div class="slide"><img src="/Logos/perfumaria/GRANADO.PNG" alt="Granado"></div>
-        <div class="slide"><img src="/Logos/perfumaria/JADEPRO.png" alt="JADEPRO"></div>
-        <div class="slide"><img src="/Logos/perfumaria/kimbely clark.png" alt="Kimberly Clark"></div>
-        <div class="slide"><img src="/Logos/perfumaria/KISSES.png" alt="KISSES"></div>
-        <div class="slide"><img src="/Logos/perfumaria/Martins.png" alt="Martins"></div>
-        <div class="slide"><img src="/Logos/perfumaria/PETITA.png" alt="Petita"></div>
-        <div class="slide"><img src="/Logos/perfumaria/SOFTHAIR.png" alt="Softhair"></div>
-        <div class="slide"><img src="/Logos/perfumaria/UNILEVER.png" alt="Unilever"></div>
+        <div class="slide"><img src="../Logos/perfumaria/BIOSOFT.png" alt="Biosoft"></div>
+        <div class="slide"><img src="../Logos/perfumaria/GRANADO.PNG" alt="Granado"></div>
+        <div class="slide"><img src="../Logos/perfumaria/JADEPRO.png" alt="JADEPRO"></div>
+        <div class="slide"><img src="../Logos/perfumaria/kimbely clark.png" alt="Kimberly Clark"></div>
+        <div class="slide"><img src="../Logos/perfumaria/KISSES.png" alt="KISSES"></div>
+        <div class="slide"><img src="../Logos/perfumaria/Martins.png" alt="Martins"></div>
+        <div class="slide"><img src="../Logos/perfumaria/PETITA.png" alt="Petita"></div>
+        <div class="slide"><img src="../Logos/perfumaria/SOFTHAIR.png" alt="Softhair"></div>
+        <div class="slide"><img src="../Logos/perfumaria/UNILEVER.png" alt="Unilever"></div>
 
       </div>
     </section>
@@ -93,31 +93,31 @@
     <section class="slider">
       <div class="slide-track atacado-track">
 
-        <div class="slide"><img src="/Logos/atacado/alvoar.png" alt="Alvoar"></div>
-        <div class="slide"><img src="/Logos/atacado/bracell_logo-2020.png" alt="Bracell"></div>
-        <div class="slide"><img src="/Logos/atacado/Kelldrin.png" alt="Kelldrin"></div>
-        <div class="slide"><img src="/Logos/atacado/logo dez aliemntos.jpg" alt="Dez Alimentos"></div>
-        <div class="slide"><img src="/Logos/atacado/logo-raymundo-da-fonte.png" alt="Raymundo da Fonte"></div>
-        <div class="slide"><img src="/Logos/atacado/UNILEVER.png" alt="Unilever"></div>
-        <div class="slide"><img src="/Logos/atacado/LOPES.jpg" alt="Lopes"></div>
-        <div class="slide"><img src="/Logos/atacado/m dias.png" alt="M Dias"></div>
-        <div class="slide"><img src="/Logos/atacado/Nadir.png" alt="Nadir"></div>
-        <div class="slide"><img src="/Logos/atacado/politriz.png" alt="Politriz"></div>
-        <div class="slide"><img src="/Logos/atacado/saint gobain.png" alt="Saint Gobain"></div>
-        <div class="slide"><img src="/Logos/atacado/ype.png" alt="Ypê"></div>
+        <div class="slide"><img src="../Logos/atacado/alvoar.png" alt="Alvoar"></div>
+        <div class="slide"><img src="../Logos/atacado/bracell_logo-2020.png" alt="Bracell"></div>
+        <div class="slide"><img src="../Logos/atacado/Kelldrin.png" alt="Kelldrin"></div>
+        <div class="slide"><img src="../Logos/atacado/logo dez aliemntos.jpg" alt="Dez Alimentos"></div>
+        <div class="slide"><img src="../Logos/atacado/logo-raymundo-da-fonte.png" alt="Raymundo da Fonte"></div>
+        <div class="slide"><img src="../Logos/atacado/UNILEVER.png" alt="Unilever"></div>
+        <div class="slide"><img src="../Logos/atacado/LOPES.jpg" alt="Lopes"></div>
+        <div class="slide"><img src="../Logos/atacado/m dias.png" alt="M Dias"></div>
+        <div class="slide"><img src="../Logos/atacado/Nadir.png" alt="Nadir"></div>
+        <div class="slide"><img src="../Logos/atacado/politriz.png" alt="Politriz"></div>
+        <div class="slide"><img src="../Logos/atacado/saint gobain.png" alt="Saint Gobain"></div>
+        <div class="slide"><img src="../Logos/atacado/ype.png" alt="Ypê"></div>
 
-        <div class="slide"><img src="/Logos/atacado/alvoar.png" alt="Alvoar"></div>
-        <div class="slide"><img src="/Logos/atacado/bracell_logo-2020.png" alt="Bracell"></div>
-        <div class="slide"><img src="/Logos/atacado/Kelldrin.png" alt="Kelldrin"></div>
-        <div class="slide"><img src="/Logos/atacado/logo dez aliemntos.jpg" alt="Dez Alimentos"></div>
-        <div class="slide"><img src="/Logos/atacado/logo-raymundo-da-fonte.png" alt="Raymundo da Fonte"></div>
-        <div class="slide"><img src="/Logos/atacado/UNILEVER.png" alt="Unilever"></div>
-        <div class="slide"><img src="/Logos/atacado/LOPES.jpg" alt="Lopes"></div>
-        <div class="slide"><img src="/Logos/atacado/m dias.png" alt="M Dias"></div>
-        <div class="slide"><img src="/Logos/atacado/Nadir.png" alt="Nadir"></div>
-        <div class="slide"><img src="/Logos/atacado/politriz.png" alt="Politriz"></div>
-        <div class="slide"><img src="/Logos/atacado/saint gobain.png" alt="Saint Gobain"></div>
-        <div class="slide"><img src="/Logos/atacado/ype.png" alt="Ypê"></div>
+        <div class="slide"><img src="../Logos/atacado/alvoar.png" alt="Alvoar"></div>
+        <div class="slide"><img src="../Logos/atacado/bracell_logo-2020.png" alt="Bracell"></div>
+        <div class="slide"><img src="../Logos/atacado/Kelldrin.png" alt="Kelldrin"></div>
+        <div class="slide"><img src="../Logos/atacado/logo dez aliemntos.jpg" alt="Dez Alimentos"></div>
+        <div class="slide"><img src="../Logos/atacado/logo-raymundo-da-fonte.png" alt="Raymundo da Fonte"></div>
+        <div class="slide"><img src="../Logos/atacado/UNILEVER.png" alt="Unilever"></div>
+        <div class="slide"><img src="../Logos/atacado/LOPES.jpg" alt="Lopes"></div>
+        <div class="slide"><img src="../Logos/atacado/m dias.png" alt="M Dias"></div>
+        <div class="slide"><img src="../Logos/atacado/Nadir.png" alt="Nadir"></div>
+        <div class="slide"><img src="../Logos/atacado/politriz.png" alt="Politriz"></div>
+        <div class="slide"><img src="../Logos/atacado/saint gobain.png" alt="Saint Gobain"></div>
+        <div class="slide"><img src="../Logos/atacado/ype.png" alt="Ypê"></div>
 
       </div>
     </section>
