--- a/Paginas/marcas.html
+++ b/Paginas/marcas.html
@@ -66,11 +66,11 @@
     <section class="slider">
       <div class="slide-track perfumaria-track">
 
-        <div class="slide"><img src="../Logos/perfumaria/BIOSOFT.png" alt="Biosoft"></div>
-        <div class="slide"><img src="../Logos/perfumaria/GRANADO.PNG" alt="Granado"></div>
-        <div class="slide"><img src="../Logos/perfumaria/JADEPRO.png" alt="JADEPRO"></div>
-        <div class="slide"><img src="../Logos/perfumaria/kimbely clark.png" alt="Kimberly Clark"></div>
-        <div class="slide"><img src="../Logos/perfumaria/KISSES.png" alt="KISSES"></div>
+        <div class="slide"><img src="./Logos/perfumaria/BIOSOFT.png" alt="Biosoft"></div>
+        <div class="slide"><img src="./Logos/perfumaria/GRANADO.PNG" alt="Granado"></div>
+        <div class="slide"><img src="./Logos/perfumaria/JADEPRO.png" alt="JADEPRO"></div>
+        <div class="slide"><img src="./Logos/perfumaria/kimbely clark.png" alt="Kimberly Clark"></div>
+        <div class="slide"><img src="./Logos/perfumaria/KISSES.png" alt="KISSES"></div>
         <div class="slide"><img src="../Logos/perfumaria/Martins.png" alt="Martins"></div>
         <div class="slide"><img src="../Logos/perfumaria/PETITA.png" alt="Petita"></div>
         <div class="slide"><img src="../Logos/perfumaria/SOFTHAIR.png" alt="Softhair"></div>
@@ -93,9 +93,9 @@
     <section class="slider">
       <div class="slide-track atacado-track">
 
-        <div class="slide"><img src="../Logos/atacado/alvoar.png" alt="Alvoar"></div>
-        <div class="slide"><img src="../Logos/atacado/bracell_logo-2020.png" alt="Bracell"></div>
-        <div class="slide"><img src="../Logos/atacado/Kelldrin.png" alt="Kelldrin"></div>
+        <div class="slide"><img src="./Logos/atacado/alvoar.png" alt="Alvoar"></div>
+        <div class="slide"><img src="./Logos/atacado/bracell_logo-2020.png" alt="Bracell"></div>
+        <div class="slide"><img src="./Logos/atacado/Kelldrin.png" alt="Kelldrin"></div>
         <div class="slide"><img src="../Logos/atacado/logo dez aliemntos.jpg" alt="Dez Alimentos"></div>
         <div class="slide"><img src="../Logos/atacado/logo-raymundo-da-fonte.png" alt="Raymundo da Fonte"></div>
         <div class="slide"><img src="../Logos/atacado/UNILEVER.png" alt="Unilever"></div>
