--- a/Paginas/marcas.html
+++ b/Paginas/marcas.html
@@ -12,7 +12,7 @@
 <body>
   <header>
     <div class="logosa">
-      <img src="./Logos/LOGO SANFRANCISCO.png" alt="Logo Sanfrancisco Distribuidora">
+      <img src="../Logos/LOGO SANFRANCISCO.png" alt="Logo Sanfrancisco Distribuidora">
     </div>
     <nav>
       <ul>
@@ -130,3 +130,4 @@
 </body>
 
 </html>
+
