--- a/Paginas/marcas.html
+++ b/Paginas/marcas.html
@@ -35,25 +35,25 @@
     <section class="slider">
       <div class="slide-track bomboniere-track">
 
-        <div class="slide"><img src="../Logos/bomboniere/arcor.png" alt="Arcor"></div>
-        <div class="slide"><img src="../Logos/bomboniere/bagley.png" alt="Bagley"></div>
-        <div class="slide"><img src="../Logos/bomboniere/docile.png" alt="Docile"></div>
-        <div class="slide"><img src="../Logos/bomboniere/dori.webp" alt="Dori"></div>
-        <div class="slide"><img src="../Logos/bomboniere/florestal.webp" alt="Florestal"></div>
-        <div class="slide"><img src="../Logos/bomboniere/mondelez.png" alt="Mondelez"></div>
-        <div class="slide"><img src="../Logos/bomboniere/NUCITA.png" alt="NUCITA"></div>
+        <div class="slide"><img src="./Logos/bomboniere/arcor.png" alt="Arcor"></div>
+        <div class="slide"><img src="./Logos/bomboniere/bagley.png" alt="Bagley"></div>
+        <div class="slide"><img src="./Logos/bomboniere/docile.png" alt="Docile"></div>
+        <div class="slide"><img src="./Logos/bomboniere/dori.webp" alt="Dori"></div>
+        <div class="slide"><img src="./Logos/bomboniere/florestal.webp" alt="Florestal"></div>
+        <div class="slide"><img src="./Logos/bomboniere/mondelez.png" alt="Mondelez"></div>
+        <div class="slide"><img src="./Logos/bomboniere/NUCITA.png" alt="NUCITA"></div>
         <div class="slide"><img src="../Logos/bomboniere/riclan.png" alt="Riclan"></div>
         <div class="slide"><img src="../Logos/bomboniere/SANTA HELENA.png" alt="Santa Helena"></div>
         <div class="slide"><img src="../Logos/bomboniere/SImas.png" alt="Simas"></div>
         <div class="slide"><img src="../Logos/bomboniere/ZDALIMENTOS.PNG" alt="ZD Alimentos"></div>
 
-        <div class="slide"><img src="../Logos/bomboniere/arcor.png" alt="Arcor"></div>
-        <div class="slide"><img src="../Logos/bomboniere/bagley.png" alt="Bagley"></div>
-        <div class="slide"><img src="../Logos/bomboniere/docile.png" alt="Docile"></div>
-        <div class="slide"><img src="../Logos/bomboniere/dori.webp" alt="Dori"></div>
-        <div class="slide"><img src="../Logos/bomboniere/florestal.webp" alt="Florestal"></div>
-        <div class="slide"><img src="../Logos/bomboniere/mondelez.png" alt="Mondelez"></div>
-        <div class="slide"><img src="../Logos/bomboniere/NUCITA.png" alt="NUCITA"></div>
+        <div class="slide"><img src="./Logos/bomboniere/arcor.png" alt="Arcor"></div>
+        <div class="slide"><img src="./Logos/bomboniere/bagley.png" alt="Bagley"></div>
+        <div class="slide"><img src="./Logos/bomboniere/docile.png" alt="Docile"></div>
+        <div class="slide"><img src="./Logos/bomboniere/dori.webp" alt="Dori"></div>
+        <div class="slide"><img src="./Logos/bomboniere/florestal.webp" alt="Florestal"></div>
+        <div class="slide"><img src="./Logos/bomboniere/mondelez.png" alt="Mondelez"></div>
+        <div class="slide"><img src="./Logos/bomboniere/NUCITA.png" alt="NUCITA"></div>
         <div class="slide"><img src="../Logos/bomboniere/riclan.png" alt="Riclan"></div>
         <div class="slide"><img src="../Logos/bomboniere/SANTA HELENA.png" alt="Santa Helena"></div>
         <div class="slide"><img src="../Logos/bomboniere/SImas.png" alt="Simas"></div>
@@ -130,4 +130,5 @@
 </body>
 
 </html>
+
 
