--- a/Paginas/contato.html
+++ b/Paginas/contato.html
@@ -31,7 +31,7 @@
 <body>
   <header>
     <div class="logosa">
-      <img src="/Logos/LOGO SANFRANCISCO.png" alt="Logo Sanfrancisco Distribuidora">
+      <img src="../Logos/LOGO SANFRANCISCO.png" alt="Logo Sanfrancisco Distribuidora">
     </div>
     <nav>
       <ul>
@@ -69,5 +69,6 @@
     © 2025 Sanfrancisco Distribuidora - Todos os direitos reservados
   </footer>
 </body>
+
 
 </html>
