--- a/Paginas/equipe.html
+++ b/Paginas/equipe.html
@@ -12,7 +12,7 @@
 <body>
   <header>
     <div class="logosa">
-      <img src="/Logos/LOGO SANFRANCISCO.png" alt="Logo Sanfrancisco Distribuidora">
+      <img src="../Logos/LOGO SANFRANCISCO.png" alt="Logo Sanfrancisco Distribuidora">
     </div>
     <nav>
       <ul>
@@ -77,5 +77,6 @@
     © 2025 Sanfrancisco Distribuidora - Todos os direitos reservados
   </footer>
 </body>
+
 
 </html>
