--- a/Paginas/equipe.html
+++ b/Paginas/equipe.html
@@ -12,7 +12,7 @@
 <body>
   <header>
     <div class="logosa">
-      <img src="../Logos/LOGO SANFRANCISCO.png" alt="Logo Sanfrancisco Distribuidora">
+      <img src="./Logos/LOGO SANFRANCISCO.png" alt="Logo Sanfrancisco Distribuidora">
     </div>
     <nav>
       <ul>
@@ -80,3 +80,4 @@
 
 
 </html>
+
