--- a/Paginas/sobre.html
+++ b/Paginas/sobre.html
@@ -11,7 +11,7 @@
 <body>
   <header>
     <div class="logosa">
-      <img src="/Logos/LOGO SANFRANCISCO.png" alt="Logo Sanfrancisco Distribuidora">
+      <img src="../Logos/LOGO SANFRANCISCO.png" alt="Logo Sanfrancisco Distribuidora">
     </div>
     <nav>
       <ul>
@@ -87,5 +87,6 @@
 
   <script src="../js/script.js"></script>
 </body>
+
 
 </html>
