--- a/Paginas/sobre.html
+++ b/Paginas/sobre.html
@@ -29,13 +29,13 @@
     <section class="carrossel">
       <div class="carrossel-container">
         <div class="banner-slide active">
-          <img src="/Imagens/Imagem superior (1).jpeg" alt="Logística de Distribuição 1">
+          <img src="../Imagens/Imagem superior (1).jpeg" alt="Logística de Distribuição 1">
         </div>
         <div class="banner-slide">
-          <img src="/Imagens/Imagem superior (2).jpeg" alt="Logística de Distribuição 2">
+          <img src="../Imagens/Imagem superior (2).jpeg" alt="Logística de Distribuição 2">
         </div>
         <div class="banner-slide">
-          <img src="/Imagens/Imagem superior (3).jpeg" alt="Logística de Distribuição 3">
+          <img src="../Imagens/Imagem superior (3).jpeg" alt="Logística de Distribuição 3">
         </div>
 
         <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
@@ -90,3 +90,4 @@
 
 
 </html>
+
