--- a/Paginas/sobre.html
+++ b/Paginas/sobre.html
@@ -29,7 +29,7 @@
     <section class="carrossel">
       <div class="carrossel-container">
         <div class="banner-slide active">
-          <img src="../Imagens/Imagem superior (1).jpeg" alt="Logística de Distribuição 1">
+          <img src="./Imagens/Imagem superior (1).jpeg" alt="Logística de Distribuição 1">
         </div>
         <div class="banner-slide">
           <img src="../Imagens/Imagem superior (2).jpeg" alt="Logística de Distribuição 2">
@@ -90,6 +90,7 @@
 
 
 </html>
+
 
 
 
