--- a/Paginas/sobre.html
+++ b/Paginas/sobre.html
@@ -32,10 +32,10 @@
           <img src="./Imagens/Imagem superior (1).jpeg" alt="Logística de Distribuição 1">
         </div>
         <div class="banner-slide">
-          <img src="../Imagens/Imagem superior (2).jpeg" alt="Logística de Distribuição 2">
+          <img src="./Imagens/Imagem superior (2).jpeg" alt="Logística de Distribuição 2">
         </div>
         <div class="banner-slide">
-          <img src="../Imagens/Imagem superior (3).jpeg" alt="Logística de Distribuição 3">
+          <img src="./Imagens/Imagem superior (3).jpeg" alt="Logística de Distribuição 3">
         </div>
 
         <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
@@ -90,6 +90,7 @@
 
 
 </html>
+
 
 
 
